--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Creating and Inserting DOM Elements</title>
   </head>
@@ -7,6 +7,7 @@
   </script>
   <body>
     <main id="main"></main>
+
     <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
